Assigned action is lost if file is saved while in NLA tweaking mode on a linked object with linked animation data #106801
Closed
opened 2023-04-11 13:05:02 +02:00 by Corrado Piscitelli
·
12 comments
No Branch/Tag Specified
main
blender-v4.0-release
temp-sculpt-dyntopo
temp-sculpt-brush-channel
blender-v3.6-release
universal-scene-description
blender-v3.3-release
asset-browser-frontend-split
brush-assets-project
asset-shelf
anim/armature-drawing-refactor-3
temp-sculpt-dyntopo-hive-alloc
tmp-usd-python-mtl
tmp-usd-3.6
blender-v3.5-release
blender-projects-basics
blender-v2.93-release
temp-sculpt-attr-api
realtime-clock
sculpt-dev
gpencil-next
bevelv2
microfacet_hair
xr-dev
principled-v2
v3.6.4
v3.6.3
v3.3.11
v3.6.2
v3.3.10
v3.6.1
v3.3.9
v3.6.0
v3.3.8
v3.3.7
v2.93.18
v3.5.1
v3.3.6
v2.93.17
v3.5.0
v2.93.16
v3.3.5
v3.3.4
v2.93.15
v2.93.14
v3.3.3
v2.93.13
v2.93.12
v3.4.1
v3.3.2
v3.4.0
v3.3.1
v2.93.11
v3.3.0
v3.2.2
v2.93.10
v3.2.1
v3.2.0
v2.83.20
v2.93.9
v3.1.2
v3.1.1
v3.1.0
v2.83.19
v2.93.8
v3.0.1
v2.93.7
v3.0.0
v2.93.6
v2.93.5
v2.83.18
v2.93.4
v2.93.3
v2.83.17
v2.93.2
v2.93.1
v2.83.16
v2.93.0
v2.83.15
v2.83.14
v2.83.13
v2.92.0
v2.83.12
v2.91.2
v2.83.10
v2.91.0
v2.83.9
v2.83.8
v2.83.7
v2.90.1
v2.83.6.1
v2.83.6
v2.90.0
v2.83.5
v2.83.4
v2.83.3
v2.83.2
v2.83.1
v2.83
v2.82a
v2.82
v2.81a
v2.81
v2.80
v2.80-rc3
v2.80-rc2
v2.80-rc1
v2.79b
v2.79a
v2.79
v2.79-rc2
v2.79-rc1
v2.78c
v2.78b
v2.78a
v2.78
v2.78-rc2
v2.78-rc1
v2.77a
v2.77
v2.77-rc2
v2.77-rc1
v2.76b
v2.76a
v2.76
v2.76-rc3
v2.76-rc2
v2.76-rc1
v2.75a
v2.75
v2.75-rc2
v2.75-rc1
v2.74
v2.74-rc4
v2.74-rc3
v2.74-rc2
v2.74-rc1
v2.73a
v2.73
v2.73-rc1
v2.72b
2.72b
v2.72a
v2.72
v2.72-rc1
v2.71
v2.71-rc2
v2.71-rc1
v2.70a
v2.70
v2.70-rc2
v2.70-rc
v2.69
v2.68a
v2.68
v2.67b
v2.67a
v2.67
v2.66a
v2.66
v2.65a
v2.65
v2.64a
v2.64
v2.63a
v2.63
v2.61
v2.60a
v2.60
v2.59
v2.58a
v2.58
v2.57b
v2.57a
v2.57
v2.56a
v2.56
v2.55
v2.54
v2.53
v2.52
v2.51
v2.50
v2.49b
v2.49a
v2.49
v2.48a
v2.48
v2.47
v2.46
v2.45
v2.44
v2.43
v2.42a
v2.42
v2.41
v2.40
v2.37a
v2.37
v2.36
v2.35a
v2.35
v2.34
v2.33a
v2.33
v2.32
v2.31a
v2.31
v2.30
v2.28c
v2.28a
v2.28
v2.27
v2.26
v2.25
Labels
Clear labels
This issue affects/is about backward or forward compatibility
Issues relating to security: https://wiki.blender.org/wiki/Process/Vulnerability_Reports
Apply labels
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
This issue affects/is about backward or forward compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Issues relating to security: https://wiki.blender.org/wiki/Process/Vulnerability_Reports
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
Milestone
Set milestone
Clear milestone
No items
No Milestone
Projects
Set Project
Clear projects
No project
Assignees
Assign users
Clear assignees
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#106801
Reference in New Issue
There is no content yet.
Delete Branch "%!s(<nil>)"
Deleting a branch is permanent. Although the deleted branch may exist for a short time before cleaning up, in most cases it CANNOT be undone. Continue?
System Information
Operating system: macOS-13.3-arm64-arm-64bit 64 Bits
Graphics card: Metal API Apple M1 Pro 1.2
Blender Version
Broken: version: 3.5.0, branch: blender-v3.5-release, commit date: 2023-03-29 02:56, hash:
1be25cfff18b
Worked: NA
Short description of error
NLA Editor loses original assigned action to a linked rig generated with rigify if file is saved in tweaking mode on a strip with a different action.
Entering tweaking mode temporarily changes the assigned action in Action Editor with the one the user wants to edit. Normally saving the file in this state and then reopening it will not be a problem, the user will find the interface exactly as it was saved, with tweaking mode active, and getting out of tweaking mode will reset the action in Action Editor to the previous assigned one.
However, if this is done to a linked rig generated with rigify (I could test and reproduce this bug on a human metarig and on a rig with just a pivot with the switchable parent property) reopening the file will result in tweaking mode being off and the termporary assigned action now being the permanent one in Action Editor (with the possible loss of the previous one).
Exact steps for others to reproduce the error
Complete list:
Create a file with a human metarig and generate rig with rigify.
Link the collection with the generated rig in a new file.
Now you have to make a library override, either using the drop down menus in the 3d view "Object -> Relations -> Make Library Override", or "Object -> Library Override -> Make", or by using the right click menu in the outliner going in "Library Override -> Make -> Selected and Content".
Create an action strip (Action_A).
Create a new action in action editor without creating a new strip (Action_B).
Enter tweaking mode on the previous action strip (Action_A).
Save file, then reopen.
Now the action in Action Editor will be Action_A, even though it should still be Action_B. Action_B should now still be in the file with 0 users.
Short list:


Open attached file:[animation_human_clean.blend]
Enter Tweaking mode on action strip, as shown in screenshot
Save file, then reopen.
You should find this result
By making a few tests I've been able to narrow it down to there being any bone with a "switchable parent" rigify property generating this bug.
*Edited the post to add clearer linking and library override instructios in the complete list.
@bclark This is the issue @icappiello was talking about.
@angavrilov this seems something that you should have a look too. it seems to happen only when a rig contains a rigify space switching enabled sub-rig (basic pivot, limbs, spine)
Thanks, I didn't get the tag notification here :(
Looking.
We need to update the ticket to include the entire process including how you made the library override.
I have edited the post by adding a few more informations on the library override.
I basically tested every method I knew to make them and always got the same result.
By the way, the added lines are these:
Link the collection with the generated rig in a new file.
Now you have to make a library override, either using the drop down menus in the 3d view "Object -> Relations -> Make Library Override", or "Object -> Library Override -> Make", or by using the right click menu in the outliner going in "Library Override -> Make -> Selected and Content".
If there's more to add, I'm here.
I've narrowed down the problematic case a bit. This doesn't happen with all rigify rigs. For example, if you create a metarig that only has the
super_copy
rig type in it, everything works fine.It appears to be the case that this only happens with Rigify rigs that include rig types that trigger the creation of a weird sub-track on the NLA:
The rig types that trigger the creation of this sub-track at least include the
limb.arm
andlimb.leg
types. And this sub-track is created when Rigify generates the rig (i.e. the weird sub-track is already in the rig file, not just when linking).It's not clear to me yet what that sub-track is (presumably an NLA feature I'm not familiar with?), nor is it at all clear to me why Rigify is messing with NLA tracks at all. But I think this at least narrows things down a little bit.
With the help of @dr.sybren I figured out what that sub-track is, and was also able to create a minimal repro.
Minimal Repro
Files:
rig.blend
animation.blend
These were created by hand without Rigify. They have the same general structure as the repro files from @CorradoPiscitelli, and the same reported (short list) steps can be used to repro with these files.
Explanation
The weird sub-track turns out to be the animation data of the armature data block (not object).
The situation that triggers this bug is when the rig has animation data on both the armature object and the armature data, in the rig file itself. Having animation data on only the armature object or the armature data block is not enough. Both have to have animation data on them.I must have messed up my testing. The triggering case is specifically having animation data on the armature object. Whether it's on the armature data block or not is irrelevant. (Which makes a lot more sense.)(Side note: although this does mean the bug isn't specific to Rigify, it's still mysterious to me why Rigify is adding animation data to the armature data block. So that might be worth investigating separately.)
(Edit: turns out the reason for Rigify adding animation data to the armature data block is for drivers. For example, to let the animator tweak the curvature of rubber-hose limbs, since that's all b-bone based and the b-bone properties are on the armature data.)
Thanks for tracking that down!
What is our bug/priority level for this now that we have it narrowed down to reproduce?
There's some potential for data loss here, with the following situation:
It's a little unlikely, since the situation will probably be noticed by the user at step 2 above. And if they're using the NLA, they're probably aware of how actions work and can re-assign Action_B without trouble. But I think it's probably worth making this high priority nevertheless. Data loss is one of the worst things you can do to a user.
I'll keep looking at it today, and see if I can fix it, or at least narrow it down enough to figure out who best to ping about it.
Thanks to
blender-asset-tracer
, I've confirmed that the bug is happening on file save, not load. Action_B is already replaced by Action_A in the on-disk saved file.Rigify + NLA - assigned action is lost if file is saved while in tweaking mode on rigify generated linked rigto Assigned action is lost if file is saved while in NLA tweaking mode on a linked armature with both object and data animationNevermind, I was reading the data wrong (*facepalm*). It appears that the saved data is actually correct. So I think whatever is happening is happening on load.
Specifically, the on-disk blend file after saving has the following animdata fields set correctly:
action
: set toAction_A
tmpact
: set toAction_B
flag
: set to 4 (which indicates being in tweak mode, and that the main action has been temporarily moved totmpact
while the tweaking action has been moved toaction
).I re-tested the triggering cases, and I must have messed up my previous testing, because it appears that only the armature object's animation data is relevant here. This time around I tried all the following permutations in the rig file:
Investigating further, it looks like what's going on here is that because the
tmpact
field of animdata isn't exposed in RNA, the override system doesn't know anything about it and thus it doesn't get preserved in the linking file if there's animdata in the rig file to overwrite it.The solution (assuming I've identified the source of the bug accurately) is to expose
tmpact
to RNA as well, so that its state gets properly preserved and overridden locally.Assigned action is lost if file is saved while in NLA tweaking mode on a linked armature with both object and data animationto Assigned action is lost if file is saved while in NLA tweaking mode on a linked object with linked animation data